--- a/hugo.toml
+++ b/hugo.toml
@@ -1,12 +1,12 @@
 baseURL = "https://example.com"
-title = "Your Website Title"
+title = "Endarlani"
 languageCode = "en-us"
 theme = "devise"
 relativeURLs = true
 enableEmoji = true
 googleAnalytics = ""
 enableRobotsTXT = true
-copyright = "&copy; Copyright Year, Your Name"
+copyright = "&copy; Copyright 2024, Endarlani"
 
 # Main menu items
 [menu]
@@ -32,8 +32,8 @@ copyright = "&copy; Copyright Year, Your Name"
 # Configuration Features
 [params]
   description = "Your meta description"      # Your meta description of the site
-  header_title = "Your Name"                 # Your header title
-  header_subtitle = "Your Creative Subtitle" # Your header subtitle
+  header_title = "Endarlani"                 # Your header title
+  header_subtitle = "Data Collector & Analyst | Turning Data into Insights | Proficient in Web Scraping & Data Visualization" # Your header subtitle
   home_image = "/images/profile_picture.png"          # Path to header image starting from the static directory (optional)
   recent_posts = 5                           # Max amount of recent posts to show
   mainSections = ["posts", "post", "blog"]   # Main sections to include in recent posts
