--- a/hugo.toml
+++ b/hugo.toml
@@ -32,7 +32,7 @@ copyright = "&copy; Copyright 2024, Endarlani"
 # Configuration Features
 [params]
   description = "Your meta description"      # Your meta description of the site
-  header_title = "Endarlani"                 # Your header title
+  header_title = "Vivien Endarlani"                 # Your header title
   header_subtitle = "Data Collector & Analyst | Turning Data into Insights | Proficient in Web Scraping & Data Visualization" # Your header subtitle
   home_image = "/images/profile_picture.png"          # Path to header image starting from the static directory (optional)
   recent_posts = 5                           # Max amount of recent posts to show
