--- a/hugo.toml
+++ b/hugo.toml
@@ -44,10 +44,10 @@ copyright = "&copy; Copyright 2024, Endarlani"
     fontColor = "#212529"
   [[params.social]]
     fa_icon = "fab fa-github fa-1x"          # Font Awesome icon class
-    href = "http://github.com/youruser"      # Link to associate with icon (http://, https://, mailto:)
+    href = "https://github.com/NoPlasticWaste"      # Link to associate with icon (http://, https://, mailto:)
   [[params.social]]
     fa_icon = "fab fa-linkedin-in fa-1x"
-    href = ""
+    href = "https://www.linkedin.com/in/endarlani/"
   [[params.social]]
     fa_icon = "fab fa-twitter fa-1x"
     href = ""
