--- a/hugo.toml
+++ b/hugo.toml
@@ -52,5 +52,5 @@ copyright = "&copy; Copyright 2024, Endarlani"
     fa_icon = "fab fa-twitter fa-1x"
     href = ""
   [[params.social]]
-    fa_icon = "fas fa-at fa-1x"
-    href = ""
+    fa_icon = "fas fa-envelope fa-1x"
+    href = "mailto: endarlan11@gmail.com"
