--- a/hugo.toml
+++ b/hugo.toml
@@ -18,14 +18,14 @@ copyright = "&copy; Copyright 2024, Endarlani"
     weight = -110
   [[menu.main]]
     identifier = "posts"
-    name = "Posts"
-    title = "Posts"
+    name = "Showcase"
+    title = "Showcase"
     url = "/post/"
     weight = -100
   [[menu.main]]
     identifier = "categories"
-    name = "Categories"
-    title = "Categories"
+    name = "Video"
+    title = "Video"
     url = "/categories/"
     weight = -90
 
@@ -49,7 +49,7 @@ copyright = "&copy; Copyright 2024, Endarlani"
     fa_icon = "fab fa-linkedin-in fa-1x"
     href = "https://www.linkedin.com/in/endarlani/"
   [[params.social]]
-    fa_icon = "fab fa-upwork fa-1x"
+    fa_icon = "fab fa-upwork fa-1x" 
     href = ""
   [[params.social]]
     fa_icon = "fas fa-envelope fa-1x"
