--- a/hugo.toml
+++ b/hugo.toml
@@ -17,10 +17,16 @@ copyright = "&copy; Copyright 2024, Endarlani"
     url = "/about/"
     weight = -110
   [[menu.main]]
-    identifier = "posts"
+    identifier = "articles"
+    name = "Articles"
+    title = "Articles"
+    url = "/articles/"
+    weight = -100
+  [[menu.main]]
+    identifier = "showcase"
     name = "Showcase"
     title = "Showcase"
-    url = "/post/"
+    url = "/showcase/"
     weight = -100
   [[menu.main]]
     identifier = "categories"
@@ -31,20 +37,20 @@ copyright = "&copy; Copyright 2024, Endarlani"
 
 # Configuration Features
 [params]
-  description = "Data Scraping & Analyst"      # Your meta description of the site
-  header_title = "Vivien Endarlani"                 # Your header title
+  description = "Data Scraping & Analyst"               # Your meta description of the site
+  header_title = "Vivien Endarlani"                     # Your header title
   header_subtitle = "Data Collector & Analyst | Turning Data into Insights | Proficient in Web Scraping & Data Visualization" # Your header subtitle
-  home_image = "/images/profile_picture.png"          # Path to header image starting from the static directory (optional)
-  recent_posts = 5                           # Max amount of recent posts to show
-  mainSections = ["posts", "post", "blog"]   # Main sections to include in recent posts
-  [params.style]                             # CSS style overrides
+  home_image = "/images/profile_picture.png"            # Path to header image starting from the static directory (optional)
+  recent_posts = 5                                      # Max amount of recent posts to show
+  mainSections = ["posts", "post", "blog"]              # Main sections to include in recent posts
+  [params.style]                                        # CSS style overrides
     backgroundColor = "#f8f9fa"
     homeImageBorderColor = "#ffffff"
-    fontFamilyBase = "Helvetica Neue"        # First-choice font
+    fontFamilyBase = "Helvetica Neue"                   # First-choice font
     fontColor = "#212529"
   [[params.social]]
-    fa_icon = "fab fa-github fa-1x"          # Font Awesome icon class
-    href = "https://github.com/NoPlasticWaste"      # Link to associate with icon (http://, https://, mailto:)
+    fa_icon = "fab fa-github fa-1x"                     # Font Awesome icon class
+    href = "https://github.com/NoPlasticWaste"          # Link to associate with icon (http://, https://, mailto:)
   [[params.social]]
     fa_icon = "fab fa-linkedin-in fa-1x"
     href = "https://www.linkedin.com/in/endarlani/"
